# myPython

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  flask_sqlalchemy_test.py  name.ps1  pyproject.toml  requirements.txt  test_db.py  upmc.py
2-python-getting-started-m2-exercise-files/: exceptions.py  loops.py
3-python-getting-started-m3-exercise-files/: functions.py  yield.py
4-python-getting-started-m4-exercise-files/: classes.py  main.py
Day1/: KasparovKarpov.py  day1.py  exercice5.py  fct.py  gnu.py  gnuText.py  histoElection.py  ok.py
Day2/: e1.py  oldCrypted.txt  oldDecrypted  wc.py  wc.txt  wc_pi.py
Day3/: 1.txt  2.txt  duplication_file.py  fraction.py  test_exception.py  unzipbyext.py
Day4/: .coverage  contacts_regex.txt  db.py  decorateur.py  equation.py  equation_test.py  palindrome.py  palindrome_test.py  regex.py  tableInfo.txt  world.db  world_database.py
asyncio/: 318_asyncio_applicaiton_life_cycle_based_on_the_tcp_echo_server_in_the_python_doc.py  319_all_the_tasks_will_complete.py  31_quickstart.py  31_quickstart_exe.py  3_async_comprehensions_1.py  3_async_comprehensions_2.py  3_async_generators_yield.py  3_async_interators_aynsc_for.py  3_asyncio_application_life_cycle_based_on_the_tcp_echo_server_inf_python_doc.py  async_contextmanager.py  async_non_blocking_logging.py  coroutine_demo.py  create_task_vs_ensure_future.py  demo.py  interator_generator_demo.py  test-contextmanager.py  threadbots_with_error_if_large_number_of_tables.py  turn_requests_to_async.py
asyncio_demo/: 31_quickstart.py  320_KeyboardInterrupt_as_a_SIGINT_handler.py  3_async_contextmanager.py  3_async_generators_yield.py  3_destroy_of_pending_tasks.py  async_blocking_logging.py  interator_generator_demo.py  turn_requests_to_async.py
contextvars_demo/: demo.py  demo_asyncio.py  demo_implicit_context_switching_with_req_id.py
coredumpy_demo/: coredumpy_module_1_20250315_164722_351935.dump
hydra/: config.yaml  my_app.py
hydra_demo/: my_app.py
itertools/: flatten_nested_dict_with_list_as_some_keys_value.py  iter_with_zip.py  itertools.py
itertools_demo/: flatten_nested_dict_with_list_as_some_keys_value.py  iter_with_zip.py  itertools.py
lc/: 53_Maximum_Subarray.py  Best Time to Buy and Sell Stock II.py  find_single.py  multiprocessing_with_large_return.py  test_fib.py
list_dict_tuple_set/: reduce_for_loop.py
multiprocessing_threading/: mass_calc_mutliprocess_is_better.py  mass_io_multithreading_is_better.py  mulitprocess_vs_single_process.py  multiprocessing_threading_gevent.py  multiprocessing_with_ProcessPoolExecutor.py  multiprocessing_with_joinable_queue.py  multithreading_with_ThreadPoolExecutor.py  multithreading_with_queue.py  simple_sleep_thread.py
sqlalchemy_test/: sqlalchemy_bulk_insert_in_multithreading.py  sqlalchemy_declarative.py  sqlalchemy_insert.py  sqlalchemy_many_to_many.py  sqlalchemy_onn_to_many.py
tests/: test_pytest.py  test_requests.py
unittest/: simple.py  test_add_key.py
(+106 files in other folders)
